--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -35,6 +35,10 @@ nav {
   display: flex;
 }
 
+#nav-right a:last-child{
+  padding-right: 0px;
+}
+
 .nav-optn {
   border-left: 1px var(--off-black-800) solid;
   height: 100%;
@@ -67,6 +71,10 @@ nav {
   #nav-right a:first-child {
     border-left: 0px;
 
+  }
+
+  #nav-right a:last-child{
+    padding-right: 22px;
   }
 
   .nav-optn {
