--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 
-:root{
+:root {
   --off-black-800: #0C1011;
   --off-black-600: #505050;
-  --off-black-700:#474747;
+  --off-black-700: #474747;
 
   --off-white-100: #F7F5EE;
   --off-white-200: #F6F6F6;
@@ -21,7 +21,7 @@
   --orange-700: #FA7428;
 }
 
-html{
+html {
   scroll-snap-type: none;
   scroll-behavior: smooth;
 }
@@ -33,17 +33,13 @@ html{
   font-style: normal;
 }
 
-@font-face {
-  font-family: "IDGrotesk Book";
-  src: url("./assets/IDGrotesk-Book.ttf") format('truetype');
-}
-
-
-a, a:visited, a:hover{
+a,
+a:visited,
+a:hover {
   text-decoration: none;
 }
 
-ul{
+ul {
   list-style-type: none;
 }
 
@@ -55,45 +51,45 @@ body {
   background-color: var(--off-white-100);
 }
 
-.p1{
+.p1 {
   font-size: 22px;
   color: var(--off-black-800);
 }
 
-.p2{
+.p2 {
   font-size: 18px;
   color: var(--off-black-800);
 }
 
-h1{
+h1 {
   color: var(--off-black-800);
   font-family: "IDGSemi";
   font-size: 112px;
-  line-height: 1.2;
+  line-height: 1.26;
   margin: 0;
 }
 
-h2{
+h2 {
   color: var(--off-black-800);
   font-family: "IDGSemi";
   font-size: 32px;
 }
 
 
-figcaption{
-  margin-top:2px;
+figcaption {
+  margin-top: 2px;
   color: #686868;
 }
 
 
-.bolden{
+.bolden {
   font-weight: 600;
 }
 
-.letter-s1{
+.letter-s1 {
   letter-spacing: 0.7px;
 }
 
-.space-32{
+.space-32 {
   height: 32px;
 }
